# dayval

./: .gitignore  DAY-2023-ERRATA.md  DAY-VALIDATION-PLAN.md  FRGR-PLAN.md  LOW-BIT-FRGR-REFERENCE-PLAN.md  README.md  RESULTS.md  pyproject.toml
dayval/: __init__.py  algorithm3.py  frsr.py  lowbit.py  magic.py  minifloat.py  specsheet.py  sweep.py  tables.py
results/: primary.csv  q1_ratio.csv  q2_ladder.csv  q3_degeneracy.csv
results/lowbit/: fp4.txt  fp6e2m3.txt  fp6e3m2.txt  fp8e4m3.txt  fp8e5m2.txt  summary_recip.csv  summary_rsqrt.csv
results/lowbit_m3/: fp6e3m2.txt  summary_recip.csv  summary_rsqrt.csv
results/lowbit_summary/: fp4.txt  fp6e2m3.txt  fp6e3m2.txt  fp8e4m3.txt  fp8e5m2.txt  summary_recip.csv  summary_rsqrt.csv
rust_kernel/: Cargo.toml  pyproject.toml
rust_kernel/src/: lib.rs
scripts/: run_lowbit.py  run_phase1.py
tests/: test_algorithm3.py  test_frsr.py  test_lowbit.py  test_magic.py  test_minifloat.py  test_rust.py  test_sweep.py
