[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dayval"
version = "0.1.0"
description = "Cross-width validation of Day 2023 FRGR magic constants"
requires-python = ">=3.10"
dependencies = [
    "mpmath>=1.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dayval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
